...
            <TermsCheckbox
              agreeToTerms={agreeToTerms}
              onToggle={() => setValue('agreeToTerms', !agreeToTerms)}
            />
            <Button
              testID="register-button"
              label={isLoading ? 'Creating Account...' : 'Create Account'}
              onPress={handleSubmit(onSubmit)}
              disabled={isLoading || !agreeToTerms}
              className="mb-6 h-14 rounded-2xl bg-green-600 shadow-sm dark:bg-green-500"
            />
            <SocialButtons isLoading={isLoading} />
          </View>
...
